# starfoundry

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  EXECUTE_ON_AUTH_SERVICE.sql  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  cleanup.sql  docker-compose.yaml  package-lock.json  package.json  service_ports.md
api/: Cargo.toml
api/src/: api-local.html  api.html  api_doc_appraisal.md  api_doc_industry.md  api_docs.rs  appraisal.rs  auth.rs  config.rs  error.rs  feature_flags.rs  healthcheck.rs  industry.rs  item.rs  job_detection.rs  lib.rs  main.rs  metric.rs  metrics.rs  project.rs  project_group.rs  rejection.rs  state.rs  structure.rs  structure_dynamic_group.rs  test_util.rs  utils.rs  version.rs
clients/generator/: Cargo.toml  definition.json  definition_orig.json
collector/: Cargo.toml
collector/src/: config.rs  error.rs  lib.rs  main.rs  resolve_item_names.md  sql.rs  tasks.rs  utils.rs
database_upgrade/: Cargo.toml  fixes.sql
database_upgrade/migrations/: 01_init.sql  02_credential.sql  03_init_logins.sql  03_project_group.sql  04_init_market.sql  04_structures.sql  05_init_projects.sql  05_project.sql  06_init_structures.sql  08_market.sql  09_event_worker.sql  10_event_worker.sql  11_blueprint_stock.sql  12_notification.sql  13_appraisal.sql  20250517222221_structure_user.sql  20250621162533_project_group_member_permissions.sql  20250707203626_jwt.sql  20250721065418_region_market.sql  99_REMOVE.sql
database_upgrade/src/: error.rs  main.rs
deprecated/api_old/: Cargo.toml  build.rs
eve-gateway/: .env.example  Cargo.toml  README.md  config.toml  sqlx.toml
eve-gateway/migrations/: 20250810112939_init.sql  20250810112941_very_tmp.sql  20251203090014_login_history.sql  20251210233552_scope.sql  20260114214657_blueprints.sql  20260120231648_system_index.sql  20260301235644_experimental_data_collection.sql
eve-gateway/src/: api_doc.md  api_docs.rs  asset.rs  auth.rs  character.rs  config.rs  contract.rs  corporation.rs  eve.rs  eve_client.rs  fitting.rs  industry.rs  internal.rs  item.rs  lib.rs  main.rs  market.rs  metrics.rs  proxy.rs  search.rs  state.rs  structure.rs  universe.rs  utils.rs
eve-gateway_lib/: Cargo.toml  README.md
eve-gateway_lib/src/: api_client.rs  asset.rs  auth.rs  character.rs  client.rs  client_trait.rs  contract.rs  error.rs  eve_asset.rs  eve_gateway_client.rs  eve_industry.rs  eve_market.rs  fitting.rs  industry.rs  item.rs  lib.rs  market.rs  search.rs  structure.rs  structure_type.rs  test.rs  universe.rs  utils.rs
eve-gateway_worker/: Cargo.toml  sqlx.toml
eve-gateway_worker/migrations/: 20251212004919_init.sql  20260114214657_blueprints.sql  20260114224110_assets.sql
eve-gateway_worker/src/: asset.rs  config.rs  error.rs  industry.rs  main.rs  metric.rs  sync.rs  tasks.rs
event_worker/: Cargo.toml  add_entries.sql
event_worker/src/: asset.rs  error.rs  industry.rs  main.rs  market.rs  metric.rs  stock.rs  task.rs  utils.rs  worker.rs
gateway/: Cargo.toml  config.toml
gateway/src/: auth.rs  catch_all.rs  client.rs  config.rs  error.rs  healthcheck.rs  main.rs  metrics.rs  state.rs
gateway_lib/: Cargo.toml
gateway_lib/src/: api_client.rs  auth.rs  error.rs  identity.rs  lib.rs
gp_lib-eve_client/: Cargo.toml
gp_lib-eve_client/src/: character.rs  corporation.rs  error.rs  eve_client.rs  jwt.rs  jwt_key.rs  lib.rs  metric.rs  utils.rs
gp_lib-types/: Cargo.toml
gp_lib-types/src/: lib.rs  starfoundry_type_marco.rs
industry/: Cargo.toml  aaa.json  sqlx.toml
industry/migrations/: 01_base.sql  03_project_group.sql  05_project.sql  06_stock.sql  07_job_detection.sql  10_appraisal.sql  12_notification.sql  20251018230546_init.sql  20251101200354_industry_hub.sql  20251101200354_structure_group.sql  20251102141820_structure_position.sql  20251123004516_project_group.sql  20251211002219_project.sql  20260128224836_industry_hub_clone.sql  20260201004346_archived.sql  20260201015856_taxes.sql  20260221010547_industry_hub_description.sql  20260301224730_industry_jobs.sql  20260308021558_project_stock.sql  20260323202553_project_industry_hub.sql  20260331070553_project_renaming.sql  20260403145046_project_group_remove_accepted.sql  20260427190845_project_job_assignments.sql  20260504232239_project.sql  20260525004924_solution_material_cost.sql  20260627215007_tags.sql  20260706215817_project_tags.sql
industry/migrations_old/: _04_structures.sql  _08_market.sql  _10_appraisal.sql  _11_notification.sql
industry/src/: api_docs.rs  config.rs  industry.rs  industry_hub.rs  internal.rs  job_assignments.rs  main.rs  project.rs  project_group.rs  sort.rs  state.rs  structure.rs  structure_group.rs  tag.rs  test.rs  test_util.rs
industry_lib/: Cargo.toml
industry_lib/src/: client.rs  error.rs  industry.rs  industry_hub.rs  lib.rs  project.rs  project_group.rs  structure.rs  tag.rs
mapping_worker/: Cargo.toml  sqlx.toml
mapping_worker/migrations/: 20251212004919_init.sql  20260530010700_systems.sql  20260530011843_objects.sql
mapping_worker/src/: config.rs  import_static.rs  import_structures.rs  main.rs
market/: Cargo.toml  sqlx.toml
market/migrations/: 20251218215249_market.sql  20260107225704_contract.sql  20260108223013_private_orders.sql  20260219134908_history.sql  20260219222851_info.sql  20260307001116_structure.sql  20260307235522_structure_region.sql  20260319102620_market_order_remove.sql  20260319165642_market_order_remove_adjustment.sql  20260405012121_virtual.sql  20260508113332_unlogged.sql  20260604215354_market.sql
market_lib/: Cargo.toml
market_worker/: Cargo.toml  config.toml  sqlx.toml
meta_webserver/: Cargo.toml  README.md
notification_lib/: Cargo.toml
service_auth/: Cargo.toml  README.md
service_eve_api/: Cargo.toml  README.md
store/: Cargo.toml  config.toml  sqlx.toml
uuidv7_migration/: Cargo.toml
worker-buildcost/: Cargo.toml  prices.out
worker-eve_sde_parser/: Cargo.toml  migration.sql  overwrites.yaml  sqlx.toml
worker-store-cost/: Cargo.toml  sqlx.toml  template.toml
worker_lib/: Cargo.toml  sqlx.toml
(+3564 files in other folders)
