[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = 'abort'

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace]
members = [
  # general purpose
  'gp_lib-eve_client',
  'gp_lib-types',
  'worker_lib',

  # gateway
  'gateway',
  'gateway_lib',

  # eve gateway
  'eve-gateway_lib',
  'eve-gateway_worker',
  'eve-gateway',

  # industry
  'industry',
  'industry_lib',
  'industry_worker',

  # market
  'market',
  'market_lib',
  'market_worker',

  # notification
  'notification_lib',

  #'meta_webserver',
  # needs rewrite to match new worker
  'worker-eve_sde_parser',

  'uuidv7_migration',
]
resolver = "2"

[workspace.package]
authors = [
  "ChiefOmnicron <eistonen.kodan.sasen@gmail.com>"
]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
redundant_field_names = "allow"
