[package]
name = "starfoundry_bin-api"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

default-run = "starfoundry_bin-api"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
starfoundry_libs-eve_api = { path = "../libs/eve_api" }
starfoundry_libs-types = { path = "../libs/types" }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["compression-full", "decompression-full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["uuid", "yaml"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4"] }
