[package]
name = "starfoundry_bin-collector"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.41"
dotenvy = "0.15.7"
futures-channel = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["chrono", "runtime-tokio-rustls", "postgres"] }
starfoundry_libs-eve_api = { path = "../libs/eve_api" }
starfoundry_libs-types = { path = "../libs/types" }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
