[package]
name = "starfoundry_bin-database_upgrade"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
