[package]
name = "starfoundry_bin-database_upgrade"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
uuid = "1.17.0"
