[package]
name = "starfoundry_bin-eve_gateway"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
jwk_kit = "0.1.2"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.9.0-alpha.1", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["uuid", "yaml"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v7"] }
