[package]
name = "starfoundry_bin-eve_gateway"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["use_pem", "aws_lc_rs"] }
jwk_kit = "0.1.2"
once_cell = "1.21.4"
prometheus-client = "0.24.1"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_client = { path = "../gp_lib-eve_client" }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = { version = "2.5.8", features = ["serde"] }
utoipa = { version = "5.5.0", features = ["uuid", "yaml"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.23.2", features = ["v7"] }
