[package]
name = "starfoundry_lib-eve_gateway"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.25", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.17"
tracing = "0.1.43"
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["chrono", "uuid", "yaml"] }
