[package]
name = "starfoundry_bin-eve_gateway_worker"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.42"
dotenvy = "0.15.7"
prometheus-client = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.9.0-alpha.1", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
starfoundry_lib-worker = { path = "../worker_lib" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber =  { version = "0.3.22", features = ["env-filter", "json"] }
uuid = "1.19.0"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"
