[package]
name = "starfoundry_bin-event_worker"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
prometheus-client = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
starfoundry_libs-eve_api = { path = "../libs/eve_api" }
starfoundry_libs-eve_sde_parser = { path = "../libs/eve_sde_parser" }
starfoundry_libs-notification = { path = "../libs/notification" }
starfoundry_libs-projects = { path = "../libs/projects" }
starfoundry_libs-types = { path = "../libs/types" }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v4"] }
warp = "0.3.7"

[features]
appraisal = []
