[package]
name = "starfoundry_bin-gateway"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
reqwest = { version = "0.12.25", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls-tls"] }
starfoundry_lib-gateway ={ path = "../gateway_lib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["compression-full", "decompression-full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5.7"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"
