[package]
name = "starfoundry_bin-gateway"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["use_pem", "aws_lc_rs"] }
prometheus-client = "0.24.1"
reqwest = { version = "0.13.4", features = ["json", "query", "form"] }
starfoundry_lib-gateway ={ path = "../gateway_lib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["compression-full", "decompression-full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = { version = "2.5.8", features = ["serde"] }

[lints]
workspace = true
