[package]
name = "starfoundry_lib-gateway"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
chrono = "0.4.44"
reqwest = { version = "0.13.4", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.18"
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
utoipa = { version = "5.5.0", features = ["uuid", "yaml"] }

[lints]
workspace = true
