[package]
name = "starfoundry_lib-types"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = "0.8.6"
utoipa = { version = "5.4.0", features = ["uuid"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
