[package]
name = "starfoundry_lib-types"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = "0.9.0-alpha.1"
utoipa = { version = "5.4.0", features = ["uuid"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
