[package]
name = "starfoundry_lib-types"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = "0.9.0"
utoipa = { version = "5.5.0", features = ["uuid"] }
uuid = { version = "1.23.2", features = ["serde", "v7"] }

[lints]
workspace = true
