[package]
name = "starfoundry_bin-industry"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
chrono = "0.4.44"
dotenvy = "0.15.7"
prometheus-client = "0.24.1"
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-industry = { path = "../industry_lib" }
starfoundry_lib-market = { path = "../market_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber =  { version = "0.3.23", features = ["env-filter", "json"] }
url = "2.5.8"
utoipa = { version = "5.5.0", features = ["uuid", "yaml"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.23.2", features = ["v7"] }

[dev-dependencies]
http-body-util = "0.1.3"
