[package]
name = "starfoundry_lib-industry"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0-alpha.1", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.17"
tracing = "0.1.43"
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["chrono", "uuid", "yaml"] }
uuid = { version = "1.19.0", features = ["v7"] }
