[package]
name = "starfoundry_bin-mapping"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-eve_sde_parser = { path = "../worker-eve_sde_parser" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber =  { version = "0.3.22", features = ["env-filter", "json"] }
