[package]
name = "starfoundry_bin-market"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
chrono = "0.4.44"
dotenvy = "0.15.7"
good_lp = "1.15.2"
prometheus-client = "0.24.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-market = { path = "../market_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber =  { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["uuid", "yaml"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1.3"

[lints]
workspace = true
