[package]
name = "starfoundry_lib-market"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.4", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.18"
tracing = "0.1.44"
url = "2.5.8"
utoipa = { version = "5.5.0", features = ["chrono", "uuid", "yaml"] }
uuid = { version = "1.23.2", features = ["v7"] }
