[package]
name = "starfoundry_bin-market_worker"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
prometheus-client = "0.24.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-types = { path = "../gp_lib-types" }
starfoundry_lib-worker = { path = "../worker_lib" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber =  { version = "0.3.23", features = ["env-filter", "json"] }
uuid = "1.23.2"
