[package]
name = "starfoundry_bin-meta_webserver"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15.7"
handlebars = "6.3.2"
num-format = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
starfoundry_lib-appraisal = { path = "../libs/appraisal" }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter"] }
warp = "0.3.7"
