[package]
name = "starfoundry_bin-meta_webserver"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15.7"
handlebars = "6.3.2"
num-format = "0.4.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0-alpha.1", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-appraisal = { path = "../libs/appraisal" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
warp = { version = "0.4.2", features = ["server"] }
