[package]
name = "starfoundry_lib-notification"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
