[package]
name = "starfoundry_bin-store"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.4"
# activating this will cause database problems in prod
#axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-notification = { path = "../libs/notification" }
starfoundry_lib-types = { path = "../libs/types" }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-full", "decompression-full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4"] }

[features]
overwrite_gateway_client = ["starfoundry_lib-eve_gateway/overwrite_gateway_client"]
