[package]
name = "starfoundry_bin-store"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.4"
# activating this will cause database problems in prod
#axum = { version = "0.8.6", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls-tls"] }
rustls = "0.23.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-notification = { path = "../libs/notification" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.20", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4"] }
