[package]
name = "starfoundry_bin-store"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
reqwest = { version = "0.13.1", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0-alpha.1", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
starfoundry_lib-eve_gateway = { path = "../eve-gateway_lib" }
starfoundry_lib-gateway = { path = "../gateway_lib" }
starfoundry_lib-notification = { path = "../libs/notification" }
starfoundry_lib-types = { path = "../gp_lib-types" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber =  { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4"] }
