[package]
name = "uuidv7_migration"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.9.0-alpha.1", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v7"] }
