[package]
name = "uuidv7_migration"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber =  { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.2", features = ["v7"] }
